[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.160784 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="Content"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Content"]
margin_left = 493.0
margin_top = 54.0
margin_right = 531.0
margin_bottom = 68.0
size_flags_horizontal = 4
text = "Pause"
align = 1

[node name="HSplitContainer2" type="HSplitContainer" parent="Content"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 50 )

[node name="Buttons" type="VBoxContainer" parent="Content"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 260.0
custom_constants/separation = 37
alignment = 1

[node name="Continue" type="Button" parent="Content/Buttons"]
margin_left = 477.0
margin_right = 546.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Continue"

[node name="Back to Menu" type="Button" parent="Content/Buttons"]
margin_left = 462.0
margin_top = 57.0
margin_right = 561.0
margin_bottom = 77.0
size_flags_horizontal = 4
text = "Back to Menu"

[node name="Quit" type="Button" parent="Content/Buttons"]
margin_left = 492.0
margin_top = 114.0
margin_right = 532.0
margin_bottom = 134.0
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="Content/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Content/Buttons/Back to Menu" to="." method="_on_Back_to_Menu_pressed"]
[connection signal="pressed" from="Content/Buttons/Quit" to="." method="_on_Quit_pressed"]
